//
// Created by ferra on 25/11/2024.
//

#ifndef MUSICRELEASE_H
#define MUSICRELEASE_H
#include <SongContainer.h>


class MusicRelease : public SongContainer {
protected:
public:
private:
};

#endif //MUSICRELEASE_H
